# the_networks_of_war

./: .gitignore  AGENTS.md  LEGACY_NOTEBOOK_REVIEW.md  Preprocessing Step 1 – Participant and Dyadic Setup-Copy1.ipynb  Preprocessing Step 1 – Participant and Dyadic Setup.ipynb  Preprocessing Step 2 – Descriptive Data.ipynb  Preprocessing Step 3 – Final Merges and D3.js Export.ipynb  README.md  home.html  main.html  project_button.html  the_networks_of_war_python_functions.py
backend/: AGENTS.md  README.md  pyproject.toml
backend/manual/: participant_name_replacements.json  source_metadata.json  war_types.csv
backend/sql/: 00_setup.sql  inspect_tables.sql
backend/sql/step_1/: 00_setup.sql  01_create_source_tables.sql  02_insert_source_tables.sql  02a_apply_source_adjustments.sql  02b_insert_source_adjustments.sql  03_create_reference_tables.sql  03_create_source_adjustment_tables.sql  04_create_war_dyads.sql  04_insert_source_adjustments.sql  05_create_reference_tables.sql  05_create_war_participants.sql  06_create_dyads_after_mid.sql  06_insert_reference_tables.sql  06_process_war_dyads.sql  07_add_mid_dyads.sql  07_create_initial_participants.sql  07_create_participants.sql  07_create_war_dyads.sql  08_add_missing_participants.sql  08_create_dyads.sql  08_create_initial_dyads.sql  10_create_wars.sql  (+12 more)
backend/src/: _duckdb_pipeline.py  duckdb_backend.py  pipeline.py  source.py  utils.py
backend/tests/: shared.py  test_pipeline.py  test_pipeline_query_file.py  test_source_metadata.py  test_step_1.py  test_step_1_expectations.py  test_step_2.py  test_step_3.py
(+747 files in other folders)
