[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "the-networks-of-war-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.0",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = ["black>=24.0.0", "isort>=5.13.0", "pytest>=8.0.0"]

[tool.setuptools]
packages = []

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["pipeline", "utils"]

[tool.black]
line-length = 120
target-version = ["py311"]
